welcome.lessons.welcome.array.search.OccurrenceOfValue.scala.error
maxValue:-6: error: Missing closing brace `}' assumed here
try {
^maxValue:1: error: expected class or object definition
def maxValue(nums:Array[Int]): Int = { 
^